# Smart_Interviewer

./: .env.docker.example  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  package-lock.json  package.json  pyproject.toml  test_streaming.py  test_streaming_simple.py
.github/workflows/: docker-image.yml
data/: question_bank.md  question_bank_example.md
src/smart_interviewer/: api.py  app.py  consts.py  core.py  dev.py  main.py  schemas.py  settings.py  transcriber.py  utils.py
src/smart_interviewer/core/: __init__.py  engine.py  grading.py  graph.py  history.py  llm.py  nodes.py  progression.py  prompts.py  question_bank.py  summary.py  transcriber.py  types.py
src/smart_interviewer/frontend/: api_client.py  streamlit_app.py
src/smart_interviewer/frontend/react/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
src/smart_interviewer/frontend/react/src/: App.tsx  styles.css  types.ts
src/smart_interviewer/frontend/react/src/components/: AnswerComposer.tsx  Drawer.tsx  MetricCard.tsx  Panel.tsx  TranscriptFeed.tsx
src/smart_interviewer/frontend/react/src/hooks/: useAudioRecorder.ts
src/smart_interviewer/frontend/react/src/lib/: api.ts  ndjson.ts
src/smart_interviewer/services/: tts.py
src/smart_interviewer/ui/: api_client.py  streamlit_app.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/mocks/: llm.py  transcriber.py
