[project]
name = "smart_interviewer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "faster-whisper>=1.2.1",
    "langgraph>=1.0.6",
    "requests>=2.32.5",
    "streamlit>=1.53.0",
    "streamlit-audiorec>=0.1.3",
    "uvicorn[standard]>=0.40.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/smart_interviewer"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


[tool.coverage.run]
source = ["src"]
include = ["smart_interviewer*"]
omit = ["*/tests/*", "*/test_*.py"]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]


[project.scripts]
interview = "smart_interviewer.main:main"
dev-interview = "smart_interviewer.dev:main"
